Convert resources to UTF-8 & simplify I18nUtils

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -44,7 +44,8 @@ dialog-delete-confirmation-text=Do you really want to remove the selected object
 dialog-delete-no-selection-text=Please select an object to remove first!
 dialog-invalid-fields-text=Please correct invalid fields!
 dialog-invalid-number-text=(must be a number)
-dialog-about-text=This program is a student project as part of the Programming 3 lecture at the University of Applied Sciences in Saarbr\u00FCcken.\n\nDeveloped by: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch and Michael B\u00F6s
+dialog-about-text=This program is a student project as part of the Programming 3 lecture at the University of Applied Sciences in Saarbrücken.\n\n\
+  Developed by: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch and Michael Bös
 
 # Car Strings
 car-edit-title-label=Car Configuration
@@ -53,7 +54,7 @@ car-brand-label=Brand
 car-category-label=Category
 car-color-label=Color
 car-construction-year-label=Construction Year
-car-daily-rate-label=Daily Rate [\u20AC]
+car-daily-rate-label=Daily Rate [€]
 car-defects-label=Defects
 car-door-count-label=Door Count
 car-driven-distance-label=Driven Distance [km]
@@ -148,7 +149,7 @@ rental-extra-costs-label=Extra costs
 rental-note-label=Note
 
 rental-duration-label=Day(s)
-rental-currency-label=\u20AC
+rental-currency-label=€
 
 rental-no-valid-duration=Please confirm the rent duration
 rental-no-valid-extra-costs=No valid extra costs
