Introduce message utility class powered by Spring

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,156 +1,53 @@
-# General Strings
-stage-title=Car Rental
-
-# Menubar Strings
-menubar-view-file=_File
-menubar-operation-cars=Cars
-menubar-operation-customers=Customers
-menubar-operation-employees=Employees
-menubar-operation-rentals=Rentals
-menubar-operation-close=Close
-menubar-view-edit=_Edit
-menubar-operation-new=New
-menubar-operation-edit=Edit
-menubar-operation-delete=Delete
-menubar-operation-rent=Rent
-menubar-view-help=_Help
-menubar-operation-about=About
-
-# Search Strings
-search-combobox-field-text=Choose field
-search-combobox-comparator-text=Choose comparator
-search-combobox-equals==
-search-combobox-greater=>
-search-combobox-smaller=<
-search-combobox-like=LIKE
-search-textfield-text=Search...
-
-# Button Strings
-button-search-label=Search
-button-clear-filter-label=Clear filter
-button-new-label=New...
-button-edit-label=Edit...
-button-delete-label=Delete...
-button-rent-label=Rent...
-button-cancel-label=Cancel
-button-apply-label=Apply
-
-# Dialog Strings
-dialog-information-title=Information
-dialog-confirmation-title=Confirmation
-dialog-invalid-fields-title=Invalid Fields
-dialog-cancel-confirmation-text=Do you really want to cancel?
-dialog-delete-confirmation-text=Do you really want to remove the selected object?
-dialog-delete-no-selection-text=Please select an object to remove first!
-dialog-invalid-fields-text=Please correct invalid fields!
-dialog-invalid-number-text=(must be a number)
-dialog-about-text=This program is a student project as part of the Programming 3 lecture at the University of Applied Sciences in Saarbrücken.\n\n\
+# Stage
+stage.title=Car Rental
+# Dialogs
+dialog.information.about=This program is a student project as part of the Programming 3 lecture at the University of Applied Sciences in Saarbrücken.\n\n\
   Developed by: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch and Michael Bös
-
-# Car Strings
-car-edit-title-label=Car Configuration
-car-id-label=ID
-car-brand-label=Brand
-car-category-label=Category
-car-color-label=Color
-car-construction-year-label=Construction Year
-car-daily-rate-label=Daily Rate [€]
-car-defects-label=Defects
-car-door-count-label=Door Count
-car-driven-distance-label=Driven Distance [km]
-car-equipment-label=Equipment
-car-fuel-label=Fuel
-car-gearbox-label=Gearbox
-car-horsepower-label=Horsepower [PS]
-car-licence-number-label=License Number
-car-model-label=Model
-car-next-inspection-label=Next Inspection
-car-parking-lot-label=Parking Lot
-car-tires-label=Tires
-car-vin-label=Vehicle Identification Number
-
-car-gearbox-manual-label=Manual
-car-gearbox-semi-automatic-label=Semi-Automatic
-car-gearbox-automatic-label=Automatic
-
-car-fuel-gasoline-label=Gasoline
-car-fuel-diesel-label=Diesel
-car-fuel-hybrid-label=Hybrid
-car-fuel-electric-label=Electric
-
-car-no-valid-brand=No valid brand name
-car-no-valid-category=No valid category name
-car-no-valid-color=No valid color name
-car-no-valid-construction-year=No valid construction year
-car-no-valid-daily-rate=No valid daily rate
-car-no-valid-door-count=No valid door count
-car-no-valid-driven-distance=No valid driven distance
-car-no-valid-fuel=No selected fuel
-car-no-valid-gearbox=No selected gearbox
-car-no-valid-horsepower=No valid horse power
-car-no-valid-licence-number=No valid licence number
-car-no-valid-licence-number-duplicate=There is already a car with this license number
-car-no-valid-model=No valid model name
-car-no-valid-next-inspection=No valid next inspection
-car-no-valid-parking-lot=No valid parking lot
-car-no-valid-parking-lot-duplicate=There is already a car with this parking lot
-car-no-valid-tires=No valid tires name
-car-no-valid-vin=No valid VIN
-car-no-valid-vin-duplicate=There is already a car with this VIN
-
-# Customer Strings
-customer-edit-title-label=Customer Configuration
-customer-id-label=ID
-customer-city-label=City
-customer-date-of-birth-label=Date of Birth
-customer-driver-license-id-label=Driver License ID
-customer-email-label=Email
-customer-first-name-label=First Name
-customer-house-number-label=House Number
-customer-id-number-label=ID Number
-customer-last-name-label=Last Name
-customer-phone-number-label=Phone Number
-customer-street-label=Street
-customer-zip-code-label=Zip Code
-
-customer-no-valid-first-name=No valid first name
-customer-no-valid-last-name=No valid last name
-customer-no-valid-email-address=No valid email address
-customer-no-valid-phone-number=No valid phone number
-customer-no-valid-date-of-birth=No valid date of birth
-customer-no-valid-street-name=No valid street name
-customer-no-valid-house-number=No house number
-customer-no-valid-city-name=No city name
-customer-no-valid-zip-code=No valid zip code
-customer-no-valid-id-number=No valid ID Number
-customer-no-valid-id-number-duplicate=There is already a customer with this id number
-customer-no-valid-driver-license=No valid driver license number
-customer-no-valid-driver-license-duplicate=There is already a customer with this driver license id
-
-# Employee Strings
-employee-edit-title-label=Employee Configuration
-employee-id-label=ID
-employee-first-name-label=First Name
-employee-last-name-label=Last Name
-employee-position-label=Position
-
-employee-no-valid-first-name=No valid first name
-employee-no-valid-last-name=No valid last name
-employee-no-valid-position=No valid position
-
-# Rental Strings
-rental-id-label=ID
-rental-begin-label=Begin
-rental-car-label=Car
-rental-customer-label=Customer
-rental-employee-label=Employee
-rental-end-label=End
-rental-extra-costs-label=Extra costs
-rental-note-label=Note
-
+dialog.confirmation.cancel=Do you really want to cancel?
+dialog.confirmation.delete=Do you really want to remove the selected object?
+dialog.error.delete=Could not delete the selected object
+dialog.error.delete.details=Make sure the object is not used anywhere else
+# TODO Validation
+validation.error.message=Please correct the following invalid fields
+validation.error.invalid-number=(must be a number)
+validation.car.brand=No valid brand name
+validation.car.category=No valid category name
+validation.car.color=No valid color name
+validation.car.construction-year=No valid construction year
+validation.car.daily-rate=No valid daily rate
+validation.car.door-count=No valid door count
+validation.car.driven-distance=No valid driven distance
+validation.car.fuel=No selected fuel
+validation.car.gearbox=No selected gearbox
+validation.car.horsepower=No valid horse power
+validation.car.license-number=No valid license number
+validation.car.license-number.duplicate=There is already a car with this license number
+validation.car.model=No valid model name
+validation.car.next-inspection=No valid next inspection
+validation.car.parking-lot=No valid parking lot
+validation.car.parking-lot.duplicate=There is already a car with this parking lot
+validation.car.tires=No valid tires name
+validation.car.vin=No valid VIN
+validation.car.vin.duplicate=There is already a car with this VIN
+validation.customer.first-name=No valid first name
+validation.customer.last-name=No valid last name
+validation.customer.email-address=No valid email address
+validation.customer.phone-number=No valid phone number
+validation.customer.date-of-birth=No valid date of birth
+validation.customer.street-name=No valid street name
+validation.customer.house-number=No house number
+validation.customer.city-name=No city name
+validation.customer.zip-code=No valid zip code
+validation.customer.id-number=No valid ID Number
+validation.customer.id-number.duplicate=There is already a customer with this id number
+validation.customer.driver-license=No valid driver license number
+validation.customer.license.duplicate=There is already a customer with this driver license id
+validation.employee.first-name=No valid first name
+validation.employee.last-name=No valid last name
+validation.employee.position=No valid position
+validation.rental.duration=Please confirm the rent duration
+validation.rental.extra-costs=No valid extra costs
+validation.rental.employee=No valid employee
+# Other
 rental-duration-label=Day(s)
 rental-currency-label=€
-
-rental-no-valid-duration=Please confirm the rent duration
-rental-no-valid-extra-costs=No valid extra costs
-rental-no-valid-employee=No valid employee
