--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -1,156 +1,53 @@
-# General Strings
-stage-title=Autoverwaltung
-
-# Menubar Strings
-menubar-view-file=_Datei
-menubar-operation-cars=Autos
-menubar-operation-customers=Kunden
-menubar-operation-employees=Mitarbeiter
-menubar-operation-rentals=Vermietungen
-menubar-operation-close=Schließen
-menubar-view-edit=_Bearbeiten
-menubar-operation-new=Neu
-menubar-operation-edit=Bearbeiten
-menubar-operation-delete=Löschen
-menubar-operation-rent=Vermieten
-menubar-view-help=_Hilfe
-menubar-operation-about=Über
-
-# Search Strings
-search-combobox-field-text=Feld auswählen
-search-combobox-comparator-text=Operator auswählen
-search-combobox-equals==
-search-combobox-greater=>
-search-combobox-smaller=<
-search-combobox-like=LIKE
-search-textfield-text=Suchen...
-
-# Button Strings
-button-search-label=Suchen
-button-clear-filter-label=Filter löschen
-button-new-label=Anlegen...
-button-edit-label=Bearbeiten...
-button-delete-label=Löschen...
-button-rent-label=Vermieten...
-button-cancel-label=Abbrechen
-button-apply-label=Anwenden
-
-# Dialog Strings
-dialog-information-title=Information
-dialog-confirmation-title=Bestätigung
-dialog-invalid-fields-title=Ungültige Felder
-dialog-cancel-confirmation-text=Möchten Sie wirklich abbrechen?
-dialog-delete-confirmation-text=Möchten Sie das ausgewählte Objekt wirklich löschen?
-dialog-delete-no-selection-text=Bitte zunächst zu löschendes Objekt auswählen!
-dialog-invalid-fields-text=Bitte korrigieren Sie ungültige Felder
-dialog-invalid-number-text=(muss eine Zahl sein)
-dialog-about-text=Dieses Programm ist ein Studentenprojekt der Vorlesung Programmierung 3 an der Hochschule für Technik und Wirtschaft des Saarlandes in Saarbrücken.\n\n\
+# Stage
+stage.title=Autoverwaltung
+# Dialogs
+dialog.information.about=Dieses Programm ist ein Studentenprojekt der Vorlesung Programmierung 3 an der Hochschule für Technik und Wirtschaft des Saarlandes in Saarbrücken.\n\n\
   Entwickelt von: Arthur Kelsch, Hagen Schackmann, Jens Thewes, Julian Quint, Lukas Raubuch und Michael Bös
-
-# Car Strings
-car-edit-title-label=Auto Konfiguration
-car-id-label=ID
-car-brand-label=Marke
-car-category-label=Kategorie
-car-color-label=Farbe
-car-construction-year-label=Baujahr
-car-daily-rate-label=Tagessatz [€]
-car-defects-label=Mängel
-car-door-count-label=Anzahl Türen
-car-driven-distance-label=Gefahrene Distanz [km]
-car-equipment-label=Ausstattung
-car-fuel-label=Kraftstoff
-car-gearbox-label=Getriebe
-car-horsepower-label=Leistung [PS]
-car-licence-number-label=Kennzeichen
-car-model-label=Modell
-car-next-inspection-label=Nächste Inspektion
-car-parking-lot-label=Parkplatz
-car-tires-label=Bereifung
-car-vin-label=Fahrgestellnummer
-
-car-gearbox-manual-label=Schaltgetriebe
-car-gearbox-semi-automatic-label=Halbautomatik
-car-gearbox-automatic-label=Automatik
-
-car-fuel-gasoline-label=Benzin
-car-fuel-diesel-label=Diesel
-car-fuel-hybrid-label=Hybrid
-car-fuel-electric-label=Elektro
-
-car-no-valid-brand=Kein gültiger Markenname
-car-no-valid-category=Kein gültiger Kategorienname
-car-no-valid-color=Kein gültiger Farbenname
-car-no-valid-construction-year=Kein gültiges Baujahr
-car-no-valid-daily-rate=Kein gültiger Tagessatz
-car-no-valid-door-count=Keine gültige Türenanzahl
-car-no-valid-driven-distance=Keine gültige gefahrene Distanz
-car-no-valid-fuel=Keine Treibstoffart ausgewählt
-car-no-valid-gearbox=Keine gültige Getriebeart ausgewählt
-car-no-valid-horsepower=Keine gültige PS Zahl
-car-no-valid-licence-number=Kein gültiges Kennzeichen
-car-no-valid-licence-number-duplicate=Es existiert bereits ein Auto mit diesem Kennzeichen
-car-no-valid-model=Kein gültiger Modellname
-car-no-valid-next-inspection=Keine gültige Nächste Inspektion
-car-no-valid-parking-lot=Kein gültiger Parkplatz
-car-no-valid-parking-lot-duplicate=Es steht bereits ein Auto auf diesem Parkplatz
-car-no-valid-tires=Keine gültige Bereifung
-car-no-valid-vin=Keine gültige Fahrgestellnummer
-car-no-valid-vin-duplicate=Es existiert bereits ein Auto mit dieser Fahrgestellnummer
-
-# Customer Strings
-customer-edit-title-label=Kunden Konfiguration
-customer-id-label=ID
-customer-city-label=Stadt
-customer-date-of-birth-label=Geburtsdatum
-customer-driver-license-id-label=Führerscheinnummer
-customer-email-label=Email
-customer-first-name-label=Vorname
-customer-house-number-label=Hausnummer
-customer-id-number-label=Ausweisnummer
-customer-last-name-label=Nachname
-customer-phone-number-label=Telefonnummer
-customer-street-label=Straße
-customer-zip-code-label=PLZ
-
-customer-no-valid-first-name=Kein gültiger Vorname
-customer-no-valid-last-name=Kein gültiger Nachname
-customer-no-valid-email-address=Keine gültige Email Adresse
-customer-no-valid-phone-number=Keine gültige Telefon Nummer
-customer-no-valid-date-of-birth=Kein gültiges Geburtsdatum
-customer-no-valid-street-name=Kein gültiger Straßenname
-customer-no-valid-house-number=Keine gültige Hausnummer
-customer-no-valid-city-name=Kein gültiger Stadtname
-customer-no-valid-zip-code=Keine gültige Postleitzahl
-customer-no-valid-id-number=Keine gültige Ausweisnummer
-customer-no-valid-id-number-duplicate=Es existiert bereits ein Kunde mit der Ausweisnummer
-customer-no-valid-driver-license=Keine gültige Führerscheinnummer
-customer-no-valid-driver-license-duplicate=Es existiert bereits ein Kunde mit der Führerscheinnummer
-
-# Employee Strings
-employee-edit-title-label=Angestellten Konfiguration
-employee-id-label=ID
-employee-first-name-label=Vorname
-employee-last-name-label=Nachname
-employee-position-label=Position
-
-employee-no-valid-first-name=Kein gültiger Vorname
-employee-no-valid-last-name=Kein gültiger Nachname
-employee-no-valid-position=Keine gültige Position
-
-# Rental Strings
-rental-id-label=ID
-rental-begin-label=Beginn
-rental-car-label=Auto
-rental-customer-label=Kunde
-rental-employee-label=Mitarbeiter
-rental-end-label=Ende
-rental-extra-costs-label=Aufpreis
-rental-note-label=Notiz
-
+dialog.confirmation.cancel=Möchten Sie wirklich abbrechen?
+dialog.confirmation.delete=Möchten Sie das ausgewählte Objekt wirklich löschen?
+dialog.error.delete=Das ausgewählte Objekt konnte nicht gelöscht werden
+dialog.error.delete.details=Stellen Sie sicher, dass das Objekt nicht anderweitig verwendet wird
+# Validation
+validation.error.message=Bitte korrigieren Sie folgende ungültigen Felder
+validation.error.invalid-number=(muss eine Zahl sein)
+validation.car.brand=Kein gültiger Markenname
+validation.car.category=Kein gültiger Kategorienname
+validation.car.color=Kein gültiger Farbenname
+validation.car.construction-year=Kein gültiges Baujahr
+validation.car.daily-rate=Kein gültiger Tagessatz
+validation.car.door-count=Keine gültige Türenanzahl
+validation.car.driven-distance=Keine gültige gefahrene Distanz
+validation.car.fuel=Keine Treibstoffart ausgewählt
+validation.car.gearbox=Keine gültige Getriebeart ausgewählt
+validation.car.horsepower=Keine gültige PS Zahl
+validation.car.license-number=Kein gültiges Kennzeichen
+validation.car.license-number.duplicate=Es existiert bereits ein Auto mit diesem Kennzeichen
+validation.car.model=Kein gültiger Modellname
+validation.car.next-inspection=Keine gültige Nächste Inspektion
+validation.car.parking-lot=Kein gültiger Parkplatz
+validation.car.parking-lot.duplicate=Es steht bereits ein Auto auf diesem Parkplatz
+validation.car.tires=Keine gültige Bereifung
+validation.car.vin=Keine gültige Fahrgestellnummer
+validation.car.vin.duplicate=Es existiert bereits ein Auto mit dieser Fahrgestellnummer
+validation.customer.first-name=Kein gültiger Vorname
+validation.customer.last-name=Kein gültiger Nachname
+validation.customer.email-address=Keine gültige Email Adresse
+validation.customer.phone-number=Keine gültige Telefon Nummer
+validation.customer.date-of-birth=Kein gültiges Geburtsdatum
+validation.customer.street-name=Kein gültiger Straßenname
+validation.customer.house-number=Keine gültige Hausnummer
+validation.customer.city-name=Kein gültiger Stadtname
+validation.customer.zip-code=Keine gültige Postleitzahl
+validation.customer.id-number=Keine gültige Ausweisnummer
+validation.customer.id-number.duplicate=Es existiert bereits ein Kunde mit der Ausweisnummer
+validation.customer.driver-license=Keine gültige Führerscheinnummer
+validation.customer.license.duplicate=Es existiert bereits ein Kunde mit der Führerscheinnummer
+validation.employee.first-name=Kein gültiger Vorname
+validation.employee.last-name=Kein gültiger Nachname
+validation.employee.position=Keine gültige Position
+validation.rental.duration=Keine gültige Mietdauer
+validation.rental.extra-costs=Keine gültiger Aufpreis
+validation.rental.employee=Kein gültiger Mitarbeiter
+# Other
 rental-duration-label=Tag(e)
 rental-currency-label=€
-
-rental-no-valid-duration=Keine gültige Mietdauer
-rental-no-valid-extra-costs=Keine gültiger Aufpreis
-rental-no-valid-employee=Kein gültiger Mitarbeiter
