Controller structure refactor

--- a/src/main/resources/i18n/labels.properties
+++ b/src/main/resources/i18n/labels.properties
@@ -38,8 +38,8 @@ car.label.color=Color
 car.label.construction-year=Construction Year
 car.label.daily-rate=Daily Rate [€]
 car.label.defects=Defects
-car.label.door-count=Door Count
-car.label.driven-distance=Driven Distance [km]
+car.label.door-count=Doors
+car.label.driven-distance=Mileage
 car.label.equipment=Equipment
 car.label.fuel=Fuel
 car.label.fuel.gasoline=Gasoline
@@ -49,7 +49,7 @@ car.label.fuel.electric=Electric
 car.label.gearbox=Gearbox
 car.label.gearbox.manual=Manual
 car.label.gearbox.automatic=Automatic
-car.label.horsepower=Horsepower [PS]
+car.label.horsepower=Power [PS]
 car.label.license-number=License Number
 car.label.model=Model
 car.label.next-inspection=Next Inspection
