--- a/src/main/resources/i18n/labels_de.properties
+++ b/src/main/resources/i18n/labels_de.properties
@@ -38,8 +38,8 @@ car.label.color=Farbe
 car.label.construction-year=Baujahr
 car.label.daily-rate=Tagessatz [€]
 car.label.defects=Mängel
-car.label.door-count=Anzahl Türen
-car.label.driven-distance=Gefahrene Distanz [km]
+car.label.door-count=Türen
+car.label.driven-distance=Kilometerstand
 car.label.equipment=Ausstattung
 car.label.fuel=Kraftstoff
 car.label.fuel.gasoline=Benzin
