Validate using bean validation

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -7,9 +7,8 @@ dialog.confirmation.cancel=Do you really want to cancel?
 dialog.confirmation.delete=Do you really want to remove the selected object?
 dialog.error.delete=Could not delete the selected object
 dialog.error.delete.details=Make sure the object is not used anywhere else
+dialog.error.validation=Please correct the following invalid fields
 # TODO Validation
-validation.error.message=Please correct the following invalid fields
-validation.error.invalid-number=(must be a number)
 validation.car.brand=No valid brand name
 validation.car.category=No valid category name
 validation.car.color=No valid color name
