--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -7,9 +7,8 @@ dialog.confirmation.cancel=Möchten Sie wirklich abbrechen?
 dialog.confirmation.delete=Möchten Sie das ausgewählte Objekt wirklich löschen?
 dialog.error.delete=Das ausgewählte Objekt konnte nicht gelöscht werden
 dialog.error.delete.details=Stellen Sie sicher, dass das Objekt nicht anderweitig verwendet wird
+dialog.error.validation=Bitte korrigieren Sie folgende ungültige Felder
 # Validation
-validation.error.message=Bitte korrigieren Sie folgende ungültigen Felder
-validation.error.invalid-number=(muss eine Zahl sein)
 validation.car.brand=Kein gültiger Markenname
 validation.car.category=Kein gültiger Kategorienname
 validation.car.color=Kein gültiger Farbenname
