Refactor entities & views using better data types

--- a/src/main/resources/i18n/labels.properties
+++ b/src/main/resources/i18n/labels.properties
@@ -18,10 +18,6 @@ search.prompt.operator=Operator
 search.prompt.value=Search...
 search.button.submit=Search
 search.button.reset=Reset
-search.operator.equals==
-search.operator.contains=LIKE
-search.operator.less-than=<
-search.operator.greater-than=>
 # Buttons
 button.new=New...
 button.edit=Edit...
@@ -30,58 +26,50 @@ button.rent=Rent...
 button.cancel=Cancel
 button.apply=Apply
 # Car
-car.label.edit-title=Car Configuration
+car.label.edit-title=Edit Car
 car.label.id=ID
+car.label.year=Year
 car.label.brand=Brand
-car.label.category=Category
-car.label.color=Color
-car.label.construction-year=Construction Year
-car.label.daily-rate=Daily Rate [€]
-car.label.defects=Defects
-car.label.door-count=Doors
-car.label.driven-distance=Mileage
-car.label.equipment=Equipment
-car.label.fuel=Fuel
-car.label.fuel.gasoline=Gasoline
-car.label.fuel.diesel=Diesel
-car.label.fuel.hybrid=Hybrid
-car.label.fuel.electric=Electric
-car.label.gearbox=Gearbox
-car.label.gearbox.manual=Manual
-car.label.gearbox.automatic=Automatic
-car.label.horsepower=Power [PS]
-car.label.license-number=License Number
 car.label.model=Model
-car.label.next-inspection=Next Inspection
-car.label.parking-lot=Parking Lot
+car.label.type=Type
+car.label.color=Color
+car.label.daily-rate=Daily Rate [€]
+car.label.doors=Doors
+car.label.transmission=Transmission
+car.label.fuel=Fuel
+car.label.horsepower=Power [PS]
+car.label.mileage=Mileage
 car.label.tires=Tires
+car.label.parking-lot=Parking Lot
+car.label.license-number=License Number
 car.label.vin=Vehicle Identification Number
+car.label.next-inspection=Next Inspection
+car.label.defects=Defects
 # Customer
-customer.label.edit-title=Customer Configuration
+customer.label.edit-title=Edit Customer
 customer.label.id=ID
-customer.label.city=City
-customer.label.date-of-birth=Date of Birth
-customer.label.driver-license-id=Driver License ID
-customer.label.email=Email
 customer.label.first-name=First Name
-customer.label.house-number=House Number
-customer.label.id-number=ID Number
 customer.label.last-name=Last Name
-customer.label.phone-number=Phone Number
 customer.label.street=Street
-customer.label.zip-code=Zip Code
+customer.label.zipcode=Zip Code
+customer.label.city=City
+customer.label.phone=Phone Number
+customer.label.email=Email Address
+customer.label.date-of-birth=Date of Birth
+customer.label.id-number=ID Number
+customer.label.driver-license-number=Driver License Number
 # Employee
-employee.label.edit-title=Employee Configuration
+employee.label.edit-title=Edit Employee
 employee.label.id=ID
 employee.label.first-name=First Name
 employee.label.last-name=Last Name
 employee.label.position=Position
 # Rental
 rental.label.id=ID
-rental.label.begin=Begin
+rental.label.start=Start
+rental.label.end=End
 rental.label.car=Car
 rental.label.customer=Customer
 rental.label.employee=Employee
-rental.label.end=End
 rental.label.extra-costs=Extra costs
 rental.label.note=Note
