--- a/src/main/resources/i18n/labels_de.properties
+++ b/src/main/resources/i18n/labels_de.properties
@@ -18,10 +18,6 @@ search.prompt.operator=Operator
 search.prompt.value=Suchen...
 search.button.submit=Suchen
 search.button.reset=Zurücksetzen
-search.operator.equals==
-search.operator.contains=LIKE
-search.operator.less-than=<
-search.operator.greater-than=>
 # Buttons
 button.new=Anlegen...
 button.edit=Bearbeiten...
@@ -30,58 +26,50 @@ button.rent=Vermieten...
 button.cancel=Abbrechen
 button.apply=Anwenden
 # Car
-car.label.edit-title=Auto Konfiguration
+car.label.edit-title=Auto bearbeiten
 car.label.id=ID
+car.label.year=Baujahr
 car.label.brand=Marke
-car.label.category=Kategorie
-car.label.color=Farbe
-car.label.construction-year=Baujahr
-car.label.daily-rate=Tagessatz [€]
-car.label.defects=Mängel
-car.label.door-count=Türen
-car.label.driven-distance=Kilometerstand
-car.label.equipment=Ausstattung
-car.label.fuel=Kraftstoff
-car.label.fuel.gasoline=Benzin
-car.label.fuel.diesel=Diesel
-car.label.fuel.hybrid=Hybrid
-car.label.fuel.electric=Elektro
-car.label.gearbox=Getriebe
-car.label.gearbox.manual=Schaltgetriebe
-car.label.gearbox.automatic=Automatik
-car.label.horsepower=Leistung [PS]
-car.label.license-number=Kennzeichen
 car.label.model=Modell
-car.label.next-inspection=Nächste Inspektion
-car.label.parking-lot=Parkplatz
+car.label.type=Fahrzeugtyp
+car.label.color=Farbe
+car.label.daily-rate=Tagessatz [€]
+car.label.doors=Türen
+car.label.transmission=Getriebe
+car.label.fuel=Kraftstoff
+car.label.horsepower=Leistung [PS]
+car.label.mileage=Kilometerstand
 car.label.tires=Bereifung
+car.label.parking-lot=Parkplatz
+car.label.license-number=Kennzeichen
 car.label.vin=Fahrgestellnummer
+car.label.next-inspection=Nächste Inspektion
+car.label.defects=Mängel
 # Customer
-customer.label.edit-title=Kunden Konfiguration
+customer.label.edit-title=Kunde bearbeiten
 customer.label.id=ID
-customer.label.city=Stadt
-customer.label.date-of-birth=Geburtsdatum
-customer.label.driver-license-id=Führerscheinnummer
-customer.label.email=Email
 customer.label.first-name=Vorname
-customer.label.house-number=Hausnummer
-customer.label.id-number=Ausweisnummer
 customer.label.last-name=Nachname
-customer.label.phone-number=Telefonnummer
 customer.label.street=Straße
-customer.label.zip-code=PLZ
+customer.label.zipcode=PLZ
+customer.label.city=Stadt
+customer.label.phone=Telefonnummer
+customer.label.email=E-Mail-Adresse
+customer.label.date-of-birth=Geburtsdatum
+customer.label.id-number=Ausweisnummer
+customer.label.driver-license-number=Führerscheinnummer
 # Employee
-employee.label.edit-title=Angestellten Konfiguration
+employee.label.edit-title=Mitarbeiter bearbeiten
 employee.label.id=ID
 employee.label.first-name=Vorname
 employee.label.last-name=Nachname
 employee.label.position=Position
 # Rental
 rental.label.id=ID
-rental.label.begin=Beginn
+rental.label.start=Anfang
+rental.label.end=Ende
 rental.label.car=Auto
 rental.label.customer=Kunde
 rental.label.employee=Mitarbeiter
-rental.label.end=Ende
 rental.label.extra-costs=Aufpreis
 rental.label.note=Notiz
