--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -8,7 +8,7 @@ dialog.confirmation.delete=Do you really want to remove the selected object?
 dialog.error.delete=Could not delete the selected object
 dialog.error.delete.details=Make sure the object is not used anywhere else
 dialog.error.validation=Please correct the following invalid fields
-# TODO Validation
+# Validation
 validation.car.brand=No valid brand name
 validation.car.category=No valid category name
 validation.car.color=No valid color name
