Refactor views & start with new Rental view

--- a/src/main/resources/i18n/labels.properties
+++ b/src/main/resources/i18n/labels.properties
@@ -65,6 +65,7 @@ employee.label.first-name=First Name
 employee.label.last-name=Last Name
 employee.label.position=Position
 # Rental
+rental.label.edit-title=Rent car
 rental.label.id=ID
 rental.label.start=Start
 rental.label.end=End
@@ -73,3 +74,7 @@ rental.label.customer=Customer
 rental.label.employee=Employee
 rental.label.extra-costs=Extra costs
 rental.label.note=Note
+rental.label.duration=Duration
+rental.label.duration.days=Day(s)
+rental.label.total=Total
+rental.label.total.currency=€
