--- a/src/main/resources/i18n/labels_de.properties
+++ b/src/main/resources/i18n/labels_de.properties
@@ -65,11 +65,16 @@ employee.label.first-name=Vorname
 employee.label.last-name=Nachname
 employee.label.position=Position
 # Rental
+rental.label.edit-title=Auto mieten
 rental.label.id=ID
 rental.label.start=Anfang
 rental.label.end=Ende
 rental.label.car=Auto
 rental.label.customer=Kunde
 rental.label.employee=Mitarbeiter
-rental.label.extra-costs=Aufpreis
+rental.label.extra-costs=Zusatzkosten
 rental.label.note=Notiz
+rental.label.duration=Dauer
+rental.label.duration.days=Tag(e)
+rental.label.total=Summe
+rental.label.total.currency=€
