--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -45,8 +45,5 @@ validation.employee.first-name=Kein gültiger Vorname
 validation.employee.last-name=Kein gültiger Nachname
 validation.employee.position=Keine gültige Position
 validation.rental.duration=Keine gültige Mietdauer
-validation.rental.extra-costs=Keine gültiger Aufpreis
+validation.rental.extra-costs=Keine gültigen Zusatzkosten
 validation.rental.employee=Kein gültiger Mitarbeiter
-# Other
-rental-duration-label=Tag(e)
-rental-currency-label=€
