--- a/src/main/resources/i18n/labels.properties
+++ b/src/main/resources/i18n/labels.properties
@@ -18,6 +18,11 @@ search.prompt.operator=Operator
 search.prompt.value=Search...
 search.button.submit=Search
 search.button.reset=Reset
+search.operator.equal=Equal
+search.operator.not-equal=Not equal
+search.operator.contains=Contains
+search.operator.greater-than=Greater-than (>)
+search.operator.less-than=Less-than (<)
 # Buttons
 button.new=New...
 button.edit=Edit...
@@ -32,14 +37,42 @@ car.label.year=Year
 car.label.brand=Brand
 car.label.model=Model
 car.label.type=Type
+car.label.type.sedan=Sedan
+car.label.type.coupe=Coupe
+car.label.type.convertible=Convertible
+car.label.type.wagon=Wagon
+car.label.type.hatchback=Hatchback
+car.label.type.suv=SUV
+car.label.type.pickup=Pickup
+car.label.type.van=Van
 car.label.color=Color
+car.label.color.black=Black
+car.label.color.blue=Blue
+car.label.color.gray=Gray
+car.label.color.green=Green
+car.label.color.orange=Orange
+car.label.color.purple=Purple
+car.label.color.red=Red
+car.label.color.silver=Silver
+car.label.color.white=White
+car.label.color.yellow=Yellow
 car.label.daily-rate=Daily Rate [€]
 car.label.doors=Doors
 car.label.transmission=Transmission
+car.label.transmission.manual=Manual
+car.label.transmission.semi-automatic=Semi-Automatic
+car.label.transmission.automatic=Automatic
 car.label.fuel=Fuel
+car.label.fuel.petrol=Petrol
+car.label.fuel.diesel=Diesel
+car.label.fuel.electric=Electric
+car.label.fuel.hybrid=Hybrid
 car.label.horsepower=Power [PS]
 car.label.mileage=Mileage
 car.label.tires=Tires
+car.label.tires.summer=Summer
+car.label.tires.winter=Winter
+car.label.tires.all-season=All-Season
 car.label.parking-lot=Parking Lot
 car.label.license-number=License Number
 car.label.vin=Vehicle Identification Number
