--- a/src/main/resources/i18n/labels_de.properties
+++ b/src/main/resources/i18n/labels_de.properties
@@ -18,6 +18,11 @@ search.prompt.operator=Operator
 search.prompt.value=Suchen...
 search.button.submit=Suchen
 search.button.reset=Zurücksetzen
+search.operator.equal=Gleich
+search.operator.not-equal=Ungleich
+search.operator.contains=Enthält
+search.operator.greater-than=Größer-als (>)
+search.operator.less-than=Kleiner-als (<)
 # Buttons
 button.new=Anlegen...
 button.edit=Bearbeiten...
@@ -32,14 +37,42 @@ car.label.year=Baujahr
 car.label.brand=Marke
 car.label.model=Modell
 car.label.type=Fahrzeugtyp
+car.label.type.sedan=Limousine
+car.label.type.coupe=Coupé
+car.label.type.convertible=Cabrio
+car.label.type.wagon=Kombi
+car.label.type.hatchback=Schräghecklimousine
+car.label.type.suv=SUV
+car.label.type.pickup=Pickup
+car.label.type.van=Van
 car.label.color=Farbe
+car.label.color.black=Schwarz
+car.label.color.blue=Blau
+car.label.color.gray=Grau
+car.label.color.green=Grün
+car.label.color.orange=Orange
+car.label.color.purple=Violett
+car.label.color.red=Rot
+car.label.color.silver=Silber
+car.label.color.white=Weiß
+car.label.color.yellow=Gelb
 car.label.daily-rate=Tagessatz [€]
 car.label.doors=Türen
 car.label.transmission=Getriebe
+car.label.transmission.manual=Schaltgetriebe
+car.label.transmission.semi-automatic=Halbautomatik
+car.label.transmission.automatic=Automatik
 car.label.fuel=Kraftstoff
+car.label.fuel.petrol=Benzin
+car.label.fuel.diesel=Diesel
+car.label.fuel.electric=Elektro
+car.label.fuel.hybrid=Hybrid
 car.label.horsepower=Leistung [PS]
 car.label.mileage=Kilometerstand
 car.label.tires=Bereifung
+car.label.tires.summer=Sommer
+car.label.tires.winter=Winter
+car.label.tires.all-season=Allwetter
 car.label.parking-lot=Parkplatz
 car.label.license-number=Kennzeichen
 car.label.vin=Fahrgestellnummer
