--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -9,41 +9,54 @@ dialog.error.delete=Could not delete the selected object
 dialog.error.delete.details=Make sure the object is not used anywhere else
 dialog.error.validation=Please correct the following invalid fields
 # Validation
-validation.car.brand=No valid brand name
-validation.car.category=No valid category name
-validation.car.color=No valid color name
-validation.car.construction-year=No valid construction year
-validation.car.daily-rate=No valid daily rate
-validation.car.door-count=No valid door count
-validation.car.driven-distance=No valid driven distance
-validation.car.fuel=No selected fuel
-validation.car.gearbox=No selected gearbox
-validation.car.horsepower=No valid horse power
-validation.car.license-number=No valid license number
-validation.car.license-number.duplicate=There is already a car with this license number
-validation.car.model=No valid model name
-validation.car.next-inspection=No valid next inspection
-validation.car.parking-lot=No valid parking lot
+validation.car.year.null=Year must not be empty
+validation.car.year.past=Year must not be in the future
+validation.car.brand=Brand must not be empty
+validation.car.model=Model must not be empty
+validation.car.type=Type must not be empty
+validation.car.color=Color must not be empty
+validation.car.daily-rate=Daily Rate must not be 0 or negative
+validation.car.doors=Doors must not be 0 or negative
+validation.car.transmission=Transmission must not be empty
+validation.car.fuel=Fuel must not be empty
+validation.car.horsepower=Horsepower must not be 0 or negative
+validation.car.mileage=Mileage must not be 0 or negative
+validation.car.tires=Tires must not be empty
+validation.car.parking-lot=Parking Lot must not be empty
 validation.car.parking-lot.duplicate=There is already a car with this parking lot
-validation.car.tires=No valid tires name
-validation.car.vin=No valid VIN
+validation.car.license-number.blank=License Number must not be empty
+validation.car.license-number.pattern=License Number must have a valid format (XXX XX 1234)
+validation.car.license-number.duplicate=There is already a car with this license number
+validation.car.vin.blank=VIN must not be empty
+validation.car.vin.pattern=VIN must have a valid format (17 alphanumeric characters)
 validation.car.vin.duplicate=There is already a car with this VIN
-validation.customer.first-name=No valid first name
-validation.customer.last-name=No valid last name
-validation.customer.email-address=No valid email address
-validation.customer.phone-number=No valid phone number
-validation.customer.date-of-birth=No valid date of birth
-validation.customer.street-name=No valid street name
-validation.customer.house-number=No house number
-validation.customer.city-name=No city name
-validation.customer.zip-code=No valid zip code
-validation.customer.id-number=No valid ID Number
-validation.customer.id-number.duplicate=There is already a customer with this id number
-validation.customer.driver-license=No valid driver license number
-validation.customer.license.duplicate=There is already a customer with this driver license id
-validation.employee.first-name=No valid first name
-validation.employee.last-name=No valid last name
-validation.employee.position=No valid position
-validation.rental.duration=Please confirm the rent duration
-validation.rental.extra-costs=No valid extra costs
-validation.rental.employee=No valid employee
+validation.car.next-inspection.null=Next Inspection must not be empty
+validation.car.next-inspection.future=Next Inspection must not be in the past
+validation.customer.first-name=First Name must not be empty
+validation.customer.last-name=Last Name must not be empty
+validation.customer.street=Street must not be empty
+validation.customer.zipcode=Zip Code must not be empty
+validation.customer.city=City must not be empty
+validation.customer.phone.blank=Phone Number must not be empty
+validation.customer.phone.pattern=Phone Number must have a valid format (+123456...)
+validation.customer.email.blank=Email Address must not be empty
+validation.customer.email.format=Email Address must have a valid format
+validation.customer.date-of-birth.null=Date of Birth must not be empty
+validation.customer.date-of-birth.adult=Date of Birth must equal an age of 18 or higher
+validation.customer.id-number.blank=ID Number must not be empty
+validation.customer.id-number.pattern=ID Number must have a valid format (9 alphanumeric characters)
+validation.customer.id-number.duplicate=There is already a customer with this ID number
+validation.customer.driver-license-number.blank=Driver License Number must not be empty
+validation.customer.driver-license-number.pattern=Driver License Number must have a valid format (11 alphanumeric characters)
+validation.customer.driver-license-number.duplicate=There is already a customer with this driver license number
+validation.employee.first-name=First Name must not be empty
+validation.employee.last-name=Last Name must not be empty
+validation.employee.position=Position must not be empty
+validation.rental.start.null=Start must not be empty
+validation.rental.start.future=Start must not be in the past
+validation.rental.end.null=End must not be empty
+validation.rental.end.future=End must not be in the past
+validation.rental.car=Car must not be empty
+validation.rental.customer=Customer must not be empty
+validation.rental.employee=Employee must not be empty
+validation.rental.extra-costs=Extra Costs must not be 0 or negative
