--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -9,41 +9,54 @@ dialog.error.delete=Das ausgewählte Objekt konnte nicht gelöscht werden
 dialog.error.delete.details=Stellen Sie sicher, dass das Objekt nicht anderweitig verwendet wird
 dialog.error.validation=Bitte korrigieren Sie folgende ungültige Felder
 # Validation
-validation.car.brand=Kein gültiger Markenname
-validation.car.category=Kein gültiger Kategorienname
-validation.car.color=Kein gültiger Farbenname
-validation.car.construction-year=Kein gültiges Baujahr
-validation.car.daily-rate=Kein gültiger Tagessatz
-validation.car.door-count=Keine gültige Türenanzahl
-validation.car.driven-distance=Keine gültige gefahrene Distanz
-validation.car.fuel=Keine Treibstoffart ausgewählt
-validation.car.gearbox=Keine gültige Getriebeart ausgewählt
-validation.car.horsepower=Keine gültige PS Zahl
-validation.car.license-number=Kein gültiges Kennzeichen
-validation.car.license-number.duplicate=Es existiert bereits ein Auto mit diesem Kennzeichen
-validation.car.model=Kein gültiger Modellname
-validation.car.next-inspection=Keine gültige Nächste Inspektion
-validation.car.parking-lot=Kein gültiger Parkplatz
+validation.car.year.null=Das Baujahr darf nicht leer sein
+validation.car.year.past=Das Baujahr darf nicht in der Zukunft liegen
+validation.car.brand=Der Markenname darf nicht leer sein
+validation.car.model=Der Modellname darf nicht leer sein
+validation.car.type=Der Fahrzeugtyp darf nicht leer sein
+validation.car.color=Die Farbe darf nicht leer sein
+validation.car.daily-rate=Der Tagessatz darf nicht 0 oder negativ sein
+validation.car.doors=Die Anzahl der Türen darf nicht 0 oder negativ sein
+validation.car.transmission=Das Feld Getriebe darf nicht leer sein
+validation.car.fuel=Das Feld Kraftstoff darf nicht leer sein
+validation.car.horsepower=Die Leistung darf nicht 0 oder negativ sein
+validation.car.mileage=Der Kilometerstand darf nicht 0 oder negativ sein
+validation.car.tires=Der Feld Bereifung darf nicht leer sein
+validation.car.parking-lot=Der Parkplatz darf nicht leer sein
 validation.car.parking-lot.duplicate=Es steht bereits ein Auto auf diesem Parkplatz
-validation.car.tires=Keine gültige Bereifung
-validation.car.vin=Keine gültige Fahrgestellnummer
+validation.car.license-number.blank=Das Kennzeichen darf nicht leer sein
+validation.car.license-number.pattern=Das Kennzeichen muss ein valides Format haben (XXX XX 1234)
+validation.car.license-number.duplicate=Es existiert bereits ein Auto mit diesem Kennzeichen
+validation.car.vin.blank=Die Fahrgestellnummer darf nicht leer sein
+validation.car.vin.pattern=Die Fahrgestellnummer muss ein valides Format haben (17 alphanumerische Zeichen)
 validation.car.vin.duplicate=Es existiert bereits ein Auto mit dieser Fahrgestellnummer
-validation.customer.first-name=Kein gültiger Vorname
-validation.customer.last-name=Kein gültiger Nachname
-validation.customer.email-address=Keine gültige Email Adresse
-validation.customer.phone-number=Keine gültige Telefon Nummer
-validation.customer.date-of-birth=Kein gültiges Geburtsdatum
-validation.customer.street-name=Kein gültiger Straßenname
-validation.customer.house-number=Keine gültige Hausnummer
-validation.customer.city-name=Kein gültiger Stadtname
-validation.customer.zip-code=Keine gültige Postleitzahl
-validation.customer.id-number=Keine gültige Ausweisnummer
-validation.customer.id-number.duplicate=Es existiert bereits ein Kunde mit der Ausweisnummer
-validation.customer.driver-license=Keine gültige Führerscheinnummer
-validation.customer.license.duplicate=Es existiert bereits ein Kunde mit der Führerscheinnummer
-validation.employee.first-name=Kein gültiger Vorname
-validation.employee.last-name=Kein gültiger Nachname
-validation.employee.position=Keine gültige Position
-validation.rental.duration=Keine gültige Mietdauer
-validation.rental.extra-costs=Keine gültigen Zusatzkosten
-validation.rental.employee=Kein gültiger Mitarbeiter
+validation.car.next-inspection.null=Die nächste Inspektion darf nicht leer sein
+validation.car.next-inspection.future=Die nächste Inspektion darf nicht in der Vergangenheit liegen
+validation.customer.first-name=Der Vorname darf nicht leer sein
+validation.customer.last-name=Der Nachname darf nicht leer sein
+validation.customer.street=Die Straße darf nicht leer sein
+validation.customer.zipcode=Die Postleitzahl darf nicht leer sein
+validation.customer.city=Die Stadt darf nicht leer sein
+validation.customer.phone.blank=Die Telefonnummer darf nicht leer sein
+validation.customer.phone.pattern=Die Telefonnummer muss ein valides Format haben (+123456...)
+validation.customer.email.blank=Die E-Mail-Adresse darf nicht leer sein
+validation.customer.email.format=Die E-Mail-Adresse muss ein valides Format haben
+validation.customer.date-of-birth.null=Das Geburtsdatum darf nicht leer sein
+validation.customer.date-of-birth.adult=Das Geburtsdatum muss einem Alter von mindestens 18 Jahren entsprechen
+validation.customer.id-number.blank=Die Ausweisnummer darf nicht leer sein
+validation.customer.id-number.pattern=Die Ausweisnummer muss ein valides Format haben (9 alphanumerische Zeichen)
+validation.customer.id-number.duplicate=Es existiert bereits ein Kunde mit dieser Ausweisnummer
+validation.customer.driver-license-number.blank=Die Führerscheinnummer darf nicht leer sein
+validation.customer.driver-license-number.pattern=Die Führerscheinnummer muss ein valides Format haben (11 alphanumerische Zeichen)
+validation.customer.driver-license-number.duplicate=Es existiert bereits ein Kunde mit dieser Führerscheinnummer
+validation.employee.first-name=Der Vorname darf nicht leer sein
+validation.employee.last-name=Der Nachname darf nicht leer sein
+validation.employee.position=Die Position darf nicht leer sein
+validation.rental.start.null=Der Anfang darf nicht leer sein
+validation.rental.start.future=Der Anfang darf nicht in der Vergangenheit liegen
+validation.rental.end.null=Das Ende darf nicht leer sein
+validation.rental.end.future=Das Ende darf nicht in der Vergangenheit liegen
+validation.rental.car=Das Auto darf nicht leer sein
+validation.rental.customer=Der Kunde darf nicht leer sein
+validation.rental.employee=Der Mitarbeiter darf nicht leer sein
+validation.rental.extra-costs=Die Zusatzkosten dürfen nicht 0 oder negativ sein
