Check for active rentals when deleting

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -7,6 +7,7 @@ dialog.confirmation.cancel=Do you really want to cancel?
 dialog.confirmation.delete=Do you really want to remove the selected object?
 dialog.error.delete=Could not delete the selected object
 dialog.error.delete.details=Make sure the object is not used anywhere else
+dialog.error.delete.rental=The selected rental is still active
 dialog.error.validation=Please correct the following invalid fields
 # Validation
 validation.car.year.null=Year must not be empty
