--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -7,6 +7,7 @@ dialog.confirmation.cancel=Möchten Sie wirklich abbrechen?
 dialog.confirmation.delete=Möchten Sie das ausgewählte Objekt wirklich löschen?
 dialog.error.delete=Das ausgewählte Objekt konnte nicht gelöscht werden
 dialog.error.delete.details=Stellen Sie sicher, dass das Objekt nicht anderweitig verwendet wird
+dialog.error.delete.rental=Die gewählte Vermietung ist noch aktiv
 dialog.error.validation=Bitte korrigieren Sie folgende ungültige Felder
 # Validation
 validation.car.year.null=Das Baujahr darf nicht leer sein
