update zipcode validation error message

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -36,7 +36,7 @@ validation.car.next-inspection.future=Next Inspection must not be in the past
 validation.customer.first-name=First Name must not be empty
 validation.customer.last-name=Last Name must not be empty
 validation.customer.street=Street must not be empty
-validation.customer.zipcode=Zip Code must not be empty
+validation.customer.zipcode=Zip Code ust have a valid format (5 digits)
 validation.customer.city=City must not be empty
 validation.customer.phone.blank=Phone Number must not be empty
 validation.customer.phone.pattern=Phone Number must have a valid format (+123456...)
