--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -36,7 +36,7 @@ validation.car.next-inspection.future=Die nächste Inspektion darf nicht in der 
 validation.customer.first-name=Der Vorname darf nicht leer sein
 validation.customer.last-name=Der Nachname darf nicht leer sein
 validation.customer.street=Die Straße darf nicht leer sein
-validation.customer.zipcode=Die Postleitzahl darf nicht leer sein
+validation.customer.zipcode=Die Postleitzahl muss 5-stellig sein
 validation.customer.city=Die Stadt darf nicht leer sein
 validation.customer.phone.blank=Die Telefonnummer darf nicht leer sein
 validation.customer.phone.pattern=Die Telefonnummer muss ein valides Format haben (+123456...)
